tests/parser/tests/cases/should_fail/malformed_function_literal_arrow/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:1
1 |   let str_eq: (str, str) => str = (a, b) = a == b;
  |   ^^^ here
  = note: Expected an expression, however received the identifier `str_eq`.
